--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,10 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Imports:
+    dplyr,
+    ggplot2,
+    multcompView,
+    rlang,
+    RColorBrewer
+    
