--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ Imports:
     ggplot2,
     multcompView,
     rlang,
-    RColorBrewer
+    RColorBrewer,
+    stats
 URL: https://github.com/xunwenchen/autoplot
 BugReports: https://github.com/xunwenchen/autoplot/issues
