--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,3 +18,6 @@ Imports:
     stats
 URL: https://github.com/xunwenchen/autoplot
 BugReports: https://github.com/xunwenchen/autoplot/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
